2007-08-03  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-ext.el (math-get-value,math-get-sdev)
	(math-contains-sdev): New functions.

	* calc/calc-graph.el (calc-graph-format-data)
	(calc-graph-add-curve): Check for error forms.
	(calc-graph-set-styles): Add option for error forms.

2007-08-03  Miles Bader  <miles@gnu.org>

	* vc-hooks.el (vc-handled-backends): Change capitalization of VC
	backend names for new backends to `Git', `Hg', and `Bzr'.
	* vc-hg.el (vc-hg-dired-state-info): Use `Hg' as VC backend name,
	not `HG'.
	* vc-git.el (vc-git-dired-state-info): Use `Git' as VC backend
	name, not `GIT'.
	* vc-bzr.el (vc-bzr-dir-state, vc-bzr-dired-state-info)
	(vc-bzr-unload-hook): Use `Bzr' as VC backend name, not `BZR'.

2007-08-02  Richard Stallman  <rms@gnu.org>

	* mail/rmailsum.el (rmail-make-summary-line): Find end of msg number
	to update deleted flag.

	* cus-edit.el (customize-apropos, customize-apropos-options)
	(customize-apropos-faces, customize-apropos-groups): Improve prompt.

	* menu-bar.el (menu-bar-help-menu): Add "About GNU" menu item.

	* startup.el (fancy-splash-head, startup-echo-area-message):
	Change message text.

	* emulation/tpu-edt.el (next-line-internal): Setting deleted.
	All callers use line-move.

	* progmodes/compile.el (compilation-find-buffer): Return current
	buffer immediately if suitable.
	(compile, compilation-buffer-name, compilation-start): Doc fixes.

2007-07-31  Daiki Ueno  <ueno@unixuser.org>

	* faces.el (face-normalize-spec): New function.
	(frame-set-background-mode): Normalize face-spec before calling
	face-spec-match-p.

2007-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-window): Add switch-to-buffer-other-frame option.

2007-08-03  Glenn Morris  <rgm@gnu.org>

	* cus-edit.el (customize-apropos): Make the error message indicate
	what kind of thing the user was trying to customize.

	* net/telnet.el (telnet-mode): Set comint-use-prompt-regexp to t.
