@@ -1,3 +1,8 @@
+2007-08-03  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* term.el (term-erase-in-display): Fix case when point is not at
+	the beginning of the line.
+
 2007-08-03  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc-ext.el (math-get-value,math-get-sdev)
